--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+/* :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
@@ -14,14 +14,61 @@
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
   }
-}
+} */
 
 body {
-  color: rgb(var(--foreground-rgb));
+  /* color: rgb(var(--foreground-rgb)); */
   background: linear-gradient(
       to bottom,
       transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+rgb(14,26,39)    )
+rgb(16,11,18)
+}
+
+
+/* Customize the scrollbar for WebKit-based browsers */
+.scroll-component::-webkit-scrollbar {
+ width: 5px; /* Width of the scrollbar */
+}
+
+.scroll-component::-webkit-scrollbar-track {
+ background: transparent; /* Color of the track */
+}
+
+.scroll-component::-webkit-scrollbar-thumb {
+ background: #888; /* Color of the scroll thumb */
+ border-radius:25px;
+
+}
+
+.scroll-component::-webkit-scrollbar-thumb:hover {
+ background: #555; /* Color of the scroll thumb on hover */
+}
+
+
+/* styles/global.css */
+#sideshift-modal-button {
+  -webkit-appearance: none;
+  color: rgb(17, 11, 11);
+  background-color: rgb(232, 90, 223);
+  transition: all 150ms cubic-bezier(0.4, 0, 0.2, 1);
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  text-align: center;
+  padding: 0.875rem 1rem;
+  border-radius: 0.25rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 3rem;
+  min-width: 13rem;
+  border: none;
+  cursor: pointer;
+  margin: 0 auto;
+}
+
+#sideshift-modal-button:hover {
+  opacity: 0.9;
 }
